--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/openai": "1.0.0-beta.11",
     "@azure/search-documents": "^12.0.0",
+    "@dqbd/tiktoken": "^1.0.13",
     "body-parser": "^1.20.2",
     "core-js": "^3.35.1",
     "cors": "^2.8.5",
